<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Triliza</string>

    <string name="title_activity_second">Triliza</string>

    <string name="with_android">With android</string>
    <string name="button_gametypes_online">Online</string>
    <string name="two_players">2 players</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="cancel_player">Cancel player</string>
    <string name="invite_for_play">Invite to play</string>
    <string name="update_list">Update list</string>
    <string name="start_game">Start game</string>
    <string name= "wanted_battle" >:</string>
    <string name="settings">Settings</string>
    <string name="about">Rules</string>
    <string name="quit">Quit</string>

    <string name="action_settings">Settings</string>
    <string name="anonymous">anonymous</string>
    <string name="anonym_player">Anonym player</string>
    <string name="please_enter_your_nick_name">Please enter your nick name</string>

    <string name="your_nick">Your nick:</string>
    <string name="login">Login</string>

    <string name="open_room">Open room</string>
    <string name="update_room_list">Update room list</string>
    <string name="online_rooms">Online rooms</string>
    <string name="online_room">Online room</string>
    <string name="all_online_players">All online players:</string>
    <string name="chat">Chat</string>
    <string name="top_100">Top 100</string>
    <string name="game">Game</string>
    <string name="room">Room</string>
    <string name="scanning">Scanning</string>
    <string name="select_device">Select device</string>
    <string name="none_found">None found</string>
    <string name="none_paired">None paired</string>
    <string name="bluetooth_game">Bluetooth game</string>
    <string name="button_scan">Scan</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

    <string name="exit_from_game">Exit from game</string>
    <string name="exit_from_this_game">Exit from this game</string>
    <string name="opponent_exit_from_this_game">Opponent exit from game</string>


    <string name="connection_to_server_lost">Connection to server lost</string>
    <string name="please_try_to_connect_once_more">Please try to connect once more</string>
    <string name="won">won</string>
    <string name="are_you_want_continue_game">Play more?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="the_first_player_name">The first player name:</string>
    <string name="the_second_player_name">The second player name:</string>
    <string name="login_by">Login by:</string>
    <string name="connection">Connection</string>
    <string name="connecting_server">Connecting to online server...</string>
    <string name="server_not_available">Sorry, now server isn\'t available, please try later
    </string>

    <string name="exit_from_room">Exit from room</string>
    <string name="left_the_game">left the game</string>
    <string name="exit_from_room_question">Do you want to exit from this room?</string>
    <string name="exit_from_game_question">Do you want to leave the game?</string>
    <string name="exit_from_this_game_question">Do you want to leave this game?</string>
    <string name="exit_from_online_game">Exit from online game</string>
    <string name="exit_from_game_online_question">Do you want to leave online game?</string>

    <string name="title_other_devices">Other devices:</string>
    <string name="scanning_for_devices">Scanning for devices...</string>
    <string name="title_paired_devices">Paired devices:</string>
    <string name="create_bluetooth_game">Host a Game</string>
    <string name="connect_to_bluetooth_game">Join a Game</string>
    <string name="new_game">New game</string>
    <string name="back">Back</string>
    <string name="sec">sec</string>
    <string name="nick">Nick</string>
    <string name="online_players">Online players</string>


    <string name="room_number">Room number</string>
    <string name="number_players_max_number_players">Number players/max number</string>
    <string name="rating">Rating</string>
    <string name="invited_to_play">Invited</string>
    <string name="player_name">Player name</string>
    <string name="position">Position</string>
    <string name="send">Send</string>
    <string name="input_your_message">Input your message:</string>
    <string name="message">Message</string>
    <string name="easy_level">- Easy level</string>
    <string name="player">Player</string>
    <string name="android">Android</string>
    <string name="maximum_chars_in_nick_is">Maximum chars in nick is:</string>
    <string name="wait_opponent_connection">Waiting to opponent connection</string>

    <string name="connecting_to">Connecting to</string>
    <string name="server_started_wait_connection">Server started. Waiting to connection"</string>
    <string name="try_to_connect_failed">Try to connect failed"</string>
    <string name="your_device_doesnt_support_bluetooth">Your device doesn\'t support bluetooth
    </string>
    <string name="want_to_battle_with_you">want to battle with you</string>
    <string name="wants_to_battle_with_you">Wants to battle with you:</string>
    <string name="connecting_to_bluetooth_server">Connecting to Bluetooth server...</string>
    <string name="canceled_inviting">canceled inviting</string>
    <string name="to">To</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="updating_room_list">Updating room list…</string>
    <string name="updating_rooms_list">Updating rooms list…</string>
    <string name="updating_top_100_list">Updating top 100 list…</string>
    <string name="app_need_update_text">For online game you need update your app to last version</string>
    <string name="update">Update</string>



</resources>