<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center"
              android:background="@color/online_player_list_header_background"
              android:orientation="horizontal">

    <com.font.TextViewWirhComicsFont

            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/nick"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white"

            android:textSize="@dimen/header_list_item_text_size"/>

    <com.font.TextViewWirhComicsFont

            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/rating"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white"
            android:textSize="@dimen/header_list_item_text_size"/>

    <com.font.TextViewWirhComicsFont

            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/invited_to_play"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white"
            android:textSize="@dimen/header_list_item_text_size"/>


</LinearLayout>