<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="@dimen/top_100_fragment_layout_padding_left_right"
              android:paddingRight="@dimen/top_100_fragment_layout_padding_left_right"
              android:paddingTop="@dimen/top_100_fragment_layout_padding_left_right"
              android:paddingBottom="@dimen/top_100_fragment_layout_padding_left_right">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <com.font.TextViewWirhComicsFont
                android:id="@+id/tv_position"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/position"
                style="@style/list_view_header_item"/>

        <com.font.TextViewWirhComicsFont
                android:id="@+id/tv_player_name"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/player_name"
                style="@style/list_view_header_item"/>

        <com.font.TextViewWirhComicsFont
                android:id="@+id/tv_player_rating"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/rating"
                style="@style/list_view_header_item"/>

    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/ll_updating_top100"
            >

        <com.font.TextViewWirhComicsFont
                android:id="@+id/tv_scanning_for_devices"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/updating_top_100_list"
                android:textColor="@color/blue"
                android:textSize="@dimen/bt_device_list_paired_list_text_size"/>

        <ProgressBar
                android:layout_width="@dimen/progress_bar_size"
                android:layout_height="@dimen/progress_bar_size"
                android:id="@+id/progress_bar_updating_top100"
                android:layout_gravity="right"/>
    </LinearLayout>

    <ListView
            android:id="@+id/list_view_top_100"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:cacheColorHint="@android:color/transparent"
            android:divider="@android:color/transparent"
            android:dividerHeight="@dimen/list_view_divider_height"
            />

</LinearLayout>