<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:ads="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="10dp"
              android:paddingRight="10dp"
              android:paddingTop="10dp"
              android:layout_gravity="right|bottom"
        >


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <com.font.TextViewWirhComicsFont
                android:id="@+id/tv_all_online_players"
                android:gravity="right"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/default_text_size"
                android:text="@string/all_online_players"
                android:textColor="@color/dark_blue"
                />

    </LinearLayout>
    <View android:layout_width="match_parent"
          android:layout_height="@dimen/default_red_split_line_height"/>

    <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:gravity="center"
                  android:orientation="horizontal">

        <com.font.TextViewWirhComicsFont

                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/room_number"
                style="@style/list_view_header_item"/>

        <com.font.TextViewWirhComicsFont

                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/number_players_max_number_players"
                style="@style/list_view_header_item"/>


    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/ll_updating_rooms_list"
            >

        <com.font.TextViewWirhComicsFont
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/updating_rooms_list"
                android:textColor="@color/blue"
                android:textSize="@dimen/bt_device_list_paired_list_text_size"/>

        <ProgressBar
                android:layout_width="@dimen/progress_bar_size"
                android:layout_height="@dimen/progress_bar_size"
                android:id="@+id/progress_bar_updating_rooms_list"
                android:layout_gravity="right"/>
    </LinearLayout>


    <ListView
            android:id="@+id/list_online_group"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:cacheColorHint="@android:color/transparent"
            android:divider="@android:color/transparent"
            android:dividerHeight="@dimen/list_view_divider_height"
            >
    </ListView>



</LinearLayout>