<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:ads="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
        >

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.9"
            />


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9"
            android:orientation="vertical"
            android:gravity="center_horizontal"

            >

        <ImageView
                android:id="@+id/imv_start_activity_xo_image"
                android:layout_width="@dimen/start_activity_layout_center_container_xo_image_width"
                android:layout_height="0dp"
                android:layout_weight="0.5"

                />


        <LinearLayout
                android:id="@+id/ll_start_game_layout"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_marginTop="@dimen/start_activity_layout_center_container_margin_top"
                >

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    >

                <com.font.TextViewWithFontMainActivity
                        android:id="@+id/btn_start_activity_start_game"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/start_game"
                        style="@style/text_view_main_activity"
                        />
            </LinearLayout>

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:visibility="gone"
                    >

                <com.font.TextViewWithFontMainActivity
                        android:id="@+id/btn_start_activity_settings"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/settings"

                        style="@style/text_view_main_activity"
                        />
            </LinearLayout>

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    >

                <com.font.TextViewWithFontMainActivity
                        android:id="@+id/btn_about_game"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/about"
                        style="@style/text_view_main_activity"
                        />
            </LinearLayout>

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    >

                <com.font.TextViewWithFontMainActivity
                        android:id="@+id/btn_start_activity_exit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/quit"
                        style="@style/text_view_main_activity"
                        />

            </LinearLayout>

        </LinearLayout>

        <View
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="0.6"/>


    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.9">


    </LinearLayout>


</LinearLayout>