<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="0dp"
        >

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingLeft="@dimen/general_top_buttons_layout_margin_left"
            android:paddingRight="@dimen/general_top_buttons_layout_margin_right"
            android:paddingTop="@dimen/general_top_buttons_layout_margin_top">
        
    </LinearLayout>

    <FrameLayout
            android:id="@+id/center_for_fragment"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="14"
            android:baselineAligned="false"
            android:paddingLeft="@dimen/opened_activity_layout_fragment_container_padding_left"
            android:paddingRight="@dimen/opened_activity_layout_fragment_container_padding_left"
            >


    </FrameLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_marginLeft="@dimen/general_top_buttons_layout_margin_left"
            android:layout_marginRight="@dimen/general_top_buttons_layout_margin_right"
            android:layout_marginBottom="20dp"
            >
		<LinearLayout 
		    android:layout_width="0dp"
		    android:layout_weight="1"
		    android:layout_height="33dp"
		    android:layout_margin="5dp"
		    android:id="@+id/game_background"
		    android:background="@drawable/rounded_rectangle"
		    android:orientation="horizontal">
        <com.font.ButtonWithComicsFont
                android:id="@+id/btn_opened_online_group"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/game"
                android:textSize="@dimen/general_top_buttons_text_size"
                android:textColor="@color/black"
                />
        </LinearLayout>
		<LinearLayout 
		    android:id="@+id/new_game_background"
		    android:layout_width="0dp"
		    android:layout_weight="1"
		    android:layout_margin="5dp"
		    android:layout_height="33dp"
		    android:background="@drawable/rounded_rectangle"
		    android:orientation="horizontal">
         <com.font.ButtonWithComicsFont
             android:id="@+id/btn_game_field_new_game"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center"
             android:layout_gravity="center"
             android:text="@string/new_game"
             android:textColor="@color/black"
             android:textSize="@dimen/general_bottom_buttons_text_size" />
         </LinearLayout>
         
		<LinearLayout 
		    android:id="@+id/chat_background"
		    android:layout_width="0dp"
		    android:layout_weight="1"
		    android:layout_margin="5dp"
		    android:layout_height="33dp"
		    android:background="@drawable/rounded_rectangle"
		    android:orientation="horizontal">

        <com.font.ButtonWithComicsFont
            android:id="@+id/btn_group_chat"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/chat"
            android:textColor="@color/black"
            android:textSize="@dimen/general_top_buttons_text_size" />

		</LinearLayout>
     <!--    <com.componentwithfont.ButtonWithComicsFont
                android:id="@+id/btn_game_field_back"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/general_buttons_separate_width"
                android:layout_height="match_parent"
                android:textSize="@dimen/general_bottom_buttons_text_size"
                android:text="@string/back"
                android:textColor="@color/black"/> -->

    </LinearLayout>


</LinearLayout>